--- a/crds/grafana-operator/v5.21.4.grafana.integreatly.org_grafanadashboards.yaml
+++ b/crds/grafana-operator/v5.21.4.grafana.integreatly.org_grafanadashboards.yaml
@@ -4,19 +4,22 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.19.0
-  name: grafanalibrarypanels.grafana.integreatly.org
+  name: grafanadashboards.grafana.integreatly.org
 spec:
   group: grafana.integreatly.org
   names:
     categories:
     - grafana-operator
-    kind: GrafanaLibraryPanel
-    listKind: GrafanaLibraryPanelList
-    plural: grafanalibrarypanels
-    singular: grafanalibrarypanel
+    kind: GrafanaDashboard
+    listKind: GrafanaDashboardList
+    plural: grafanadashboards
+    singular: grafanadashboard
   scope: Namespaced
   versions:
   - additionalPrinterColumns:
+    - jsonPath: .status.NoMatchingInstances
+      name: No matching instances
+      type: boolean
     - format: date-time
       jsonPath: .status.lastResync
       name: Last resync
@@ -27,8 +30,7 @@ spec:
     name: v1beta1
     schema:
       openAPIV3Schema:
-        description: GrafanaLibraryPanel is the Schema for the grafanalibrarypanels
-          API
+        description: GrafanaDashboard is the Schema for the grafanadashboards API
         properties:
           apiVersion:
             description: |-
@@ -48,7 +50,7 @@ spec:
           metadata:
             type: object
           spec:
-            description: GrafanaLibraryPanelSpec defines the desired state of GrafanaLibraryPanel
+            description: GrafanaDashboardSpec defines the desired state of GrafanaDashboard
             properties:
               allowCrossNamespaceImport:
                 default: false
@@ -215,6 +217,9 @@ spec:
                   - name
                   type: object
                 type: array
+              folder:
+                description: folder assignment for dashboard
+                type: string
               folderRef:
                 description: Name of a `GrafanaFolder` resource in the same namespace
                 type: string
@@ -407,6 +412,10 @@ spec:
                 time
               rule: (has(self.folderUID) && !(has(self.folderRef))) || (has(self.folderRef)
                 && !(has(self.folderUID))) || !(has(self.folderRef) && (has(self.folderUID)))
+            - message: folder field cannot be set when folderUID or folderRef is already
+                declared
+              rule: (has(self.folder) && !(has(self.folderRef) || has(self.folderUID)))
+                || !(has(self.folder))
             - message: spec.uid is immutable
               rule: ((!has(oldSelf.uid) && !has(self.uid)) || (has(oldSelf.uid) &&
                 has(self.uid)))
@@ -415,10 +424,14 @@ spec:
               rule: '!oldSelf.allowCrossNamespaceImport || (oldSelf.allowCrossNamespaceImport
                 && self.allowCrossNamespaceImport)'
           status:
-            description: GrafanaLibraryPanelStatus defines the observed state of GrafanaLibraryPanel
+            description: GrafanaDashboardStatus defines the observed state of GrafanaDashboard
             properties:
+              NoMatchingInstances:
+                description: The dashboard instanceSelector can't find matching grafana
+                  instances
+                type: boolean
               conditions:
-                description: Results when synchonizing resource with Grafana instances
+                description: Results when synchronizing resource with Grafana instances
                 items:
                   description: Condition contains details for one aspect of the current
                     state of this API Resource.
