--- a/crds/grafana-operator/v5.21.4.grafana.integreatly.org_grafananotificationtemplates.yaml
+++ b/crds/grafana-operator/v5.21.4.grafana.integreatly.org_grafananotificationtemplates.yaml
@@ -4,22 +4,30 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.19.0
-  name: grafananotificationpolicyroutes.grafana.integreatly.org
+  name: grafananotificationtemplates.grafana.integreatly.org
 spec:
   group: grafana.integreatly.org
   names:
     categories:
     - grafana-operator
-    kind: GrafanaNotificationPolicyRoute
-    listKind: GrafanaNotificationPolicyRouteList
-    plural: grafananotificationpolicyroutes
-    singular: grafananotificationpolicyroute
+    kind: GrafanaNotificationTemplate
+    listKind: GrafanaNotificationTemplateList
+    plural: grafananotificationtemplates
+    singular: grafananotificationtemplate
   scope: Namespaced
   versions:
-  - name: v1beta1
+  - additionalPrinterColumns:
+    - format: date-time
+      jsonPath: .status.lastResync
+      name: Last resync
+      type: date
+    - jsonPath: .metadata.creationTimestamp
+      name: Age
+      type: date
+    name: v1beta1
     schema:
       openAPIV3Schema:
-        description: GrafanaNotificationPolicyRoute is the Schema for the grafananotificationpolicyroutes
+        description: GrafanaNotificationTemplate is the Schema for the GrafanaNotificationTemplate
           API
         properties:
           apiVersion:
@@ -40,83 +48,23 @@ spec:
           metadata:
             type: object
           spec:
-            description: GrafanaNotificationPolicyRouteSpec defines the desired state
-              of GrafanaNotificationPolicyRoute
+            description: GrafanaNotificationTemplateSpec defines the desired state
+              of GrafanaNotificationTemplate
             properties:
-              active_time_intervals:
-                items:
-                  type: string
-                type: array
-              continue:
-                description: continue
+              allowCrossNamespaceImport:
+                default: false
+                description: Allow the Operator to match this resource with Grafanas
+                  outside the current namespace
                 type: boolean
-              group_by:
-                description: group by
-                items:
-                  type: string
-                type: array
-              group_interval:
-                description: group interval
-                type: string
-              group_wait:
-                description: group wait
-                type: string
-              match_re:
-                additionalProperties:
-                  type: string
-                description: match re
-                type: object
-              matchers:
-                description: matchers
-                items:
-                  properties:
-                    isEqual:
-                      description: is equal
-                      type: boolean
-                    isRegex:
-                      description: is regex
-                      type: boolean
-                    name:
-                      description: name
-                      type: string
-                    value:
-                      description: value
-                      type: string
-                  required:
-                  - isRegex
-                  - value
-                  type: object
-                type: array
-              mute_time_intervals:
-                description: mute time intervals
-                items:
-                  type: string
-                type: array
-              object_matchers:
-                description: object matchers
-                items:
-                  description: |-
-                    ObjectMatcher ObjectMatcher is a matcher that can be used to filter alerts.
-
-                    swagger:model ObjectMatcher
-                  items:
-                    type: string
-                  type: array
-                type: array
-              provenance:
-                description: provenance
-                type: string
-              receiver:
-                description: receiver
-                minLength: 1
-                type: string
-              repeat_interval:
-                description: repeat interval
-                type: string
-              routeSelector:
-                description: |-
-                  selects GrafanaNotificationPolicyRoutes to merge in when specified
-                  mutually exclusive with Routes
+              editable:
+                description: Whether to enable or disable editing of the notification
+                  template in Grafana UI
+                type: boolean
+                x-kubernetes-validations:
+                - message: spec.editable is immutable
+                  rule: self == oldSelf
+              instanceSelector:
+                description: Selects Grafana instances for import
                 properties:
                   matchExpressions:
                     description: matchExpressions is a list of label selector requirements.
@@ -161,17 +109,41 @@ spec:
                     type: object
                 type: object
                 x-kubernetes-map-type: atomic
-              routes:
-                description: routes, mutually exclusive with RouteSelector
-                x-kubernetes-preserve-unknown-fields: true
+                x-kubernetes-validations:
+                - message: spec.instanceSelector is immutable
+                  rule: self == oldSelf
+              name:
+                description: Template name
+                type: string
+              resyncPeriod:
+                description: How often the resource is synced, defaults to 10m0s if
+                  not set
+                pattern: ^([0-9]+(\.[0-9]+)?(ns|us|µs|ms|s|m|h))+$
+                type: string
+              suspend:
+                description: Suspend pauses synchronizing attempts and tells the operator
+                  to ignore changes
+                type: boolean
+              template:
+                description: Template content
+                type: string
             required:
-            - receiver
+            - instanceSelector
+            - name
             type: object
+            x-kubernetes-validations:
+            - message: spec.editable is immutable
+              rule: ((!has(oldSelf.editable) && !has(self.editable)) || (has(oldSelf.editable)
+                && has(self.editable)))
+            - message: disabling spec.allowCrossNamespaceImport requires a recreate
+                to ensure desired state
+              rule: '!oldSelf.allowCrossNamespaceImport || (oldSelf.allowCrossNamespaceImport
+                && self.allowCrossNamespaceImport)'
           status:
             description: The most recent observed state of a Grafana resource
             properties:
               conditions:
-                description: Results when synchonizing resource with Grafana instances
+                description: Results when synchronizing resource with Grafana instances
                 items:
                   description: Condition contains details for one aspect of the current
                     state of this API Resource.
