--- a/crds/grafana-operator/v5.21.4.grafana.integreatly.org_grafanaalertrulegroups.yaml
+++ b/crds/grafana-operator/v5.21.4.grafana.integreatly.org_grafanaalertrulegroups.yaml
@@ -4,22 +4,19 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.19.0
-  name: grafanadatasources.grafana.integreatly.org
+  name: grafanaalertrulegroups.grafana.integreatly.org
 spec:
   group: grafana.integreatly.org
   names:
     categories:
     - grafana-operator
-    kind: GrafanaDatasource
-    listKind: GrafanaDatasourceList
-    plural: grafanadatasources
-    singular: grafanadatasource
+    kind: GrafanaAlertRuleGroup
+    listKind: GrafanaAlertRuleGroupList
+    plural: grafanaalertrulegroups
+    singular: grafanaalertrulegroup
   scope: Namespaced
   versions:
   - additionalPrinterColumns:
-    - jsonPath: .status.NoMatchingInstances
-      name: No matching instances
-      type: boolean
     - format: date-time
       jsonPath: .status.lastResync
       name: Last resync
@@ -30,7 +27,8 @@ spec:
     name: v1beta1
     schema:
       openAPIV3Schema:
-        description: GrafanaDatasource is the Schema for the grafanadatasources API
+        description: GrafanaAlertRuleGroup is the Schema for the grafanaalertrulegroups
+          API
         properties:
           apiVersion:
             description: |-
@@ -50,51 +48,34 @@ spec:
           metadata:
             type: object
           spec:
-            description: GrafanaDatasourceSpec defines the desired state of GrafanaDatasource
+            description: GrafanaAlertRuleGroupSpec defines the desired state of GrafanaAlertRuleGroup
             properties:
               allowCrossNamespaceImport:
                 default: false
                 description: Allow the Operator to match this resource with Grafanas
                   outside the current namespace
                 type: boolean
-              datasource:
-                properties:
-                  access:
-                    type: string
-                  basicAuth:
-                    type: boolean
-                  basicAuthUser:
-                    type: string
-                  database:
-                    type: string
-                  editable:
-                    description: Whether to enable/disable editing of the datasource
-                      in Grafana UI
-                    type: boolean
-                  isDefault:
-                    type: boolean
-                  jsonData:
-                    type: object
-                    x-kubernetes-preserve-unknown-fields: true
-                  name:
-                    type: string
-                  orgId:
-                    description: Deprecated field, it has no effect
-                    format: int64
-                    type: integer
-                  secureJsonData:
-                    type: object
-                    x-kubernetes-preserve-unknown-fields: true
-                  type:
-                    type: string
-                  uid:
-                    description: Deprecated field, use spec.uid instead
-                    type: string
-                  url:
-                    type: string
-                  user:
-                    type: string
-                type: object
+              editable:
+                description: Whether to enable or disable editing of the alert rule
+                  group in Grafana UI
+                type: boolean
+                x-kubernetes-validations:
+                - message: Value is immutable
+                  rule: self == oldSelf
+              folderRef:
+                description: Match GrafanaFolders CRs to infer the uid
+                type: string
+                x-kubernetes-validations:
+                - message: Value is immutable
+                  rule: self == oldSelf
+              folderUID:
+                description: |-
+                  UID of the folder containing this rule group
+                  Overrides the FolderSelector
+                type: string
+                x-kubernetes-validations:
+                - message: Value is immutable
+                  rule: self == oldSelf
               instanceSelector:
                 description: Selects Grafana instances for import
                 properties:
@@ -144,128 +125,184 @@ spec:
                 x-kubernetes-validations:
                 - message: spec.instanceSelector is immutable
                   rule: self == oldSelf
-              plugins:
-                description: plugins
-                items:
-                  properties:
-                    name:
-                      minLength: 1
-                      type: string
-                    version:
-                      pattern: ^((0|[1-9]\d*)\.(0|[1-9]\d*)\.(0|[1-9]\d*)(?:-((?:0|[1-9]\d*|\d*[a-zA-Z-][0-9a-zA-Z-]*)(?:\.(?:0|[1-9]\d*|\d*[a-zA-Z-][0-9a-zA-Z-]*))*))?(?:\+([0-9a-zA-Z-]+(?:\.[0-9a-zA-Z-]+)*))?|latest)$
-                      type: string
-                  required:
-                  - name
-                  - version
-                  type: object
-                type: array
+              interval:
+                format: duration
+                pattern: ^([0-9]+(\.[0-9]+)?(ns|us|µs|ms|s|m|h))+$
+                type: string
+              name:
+                description: Name of the alert rule group. If not specified, the resource
+                  name will be used.
+                type: string
               resyncPeriod:
                 description: How often the resource is synced, defaults to 10m0s if
                   not set
                 pattern: ^([0-9]+(\.[0-9]+)?(ns|us|µs|ms|s|m|h))+$
                 type: string
+              rules:
+                items:
+                  description: AlertRule defines a specific rule to be evaluated.
+                    It is based on the upstream model with some k8s specific type
+                    mappings
+                  properties:
+                    annotations:
+                      additionalProperties:
+                        type: string
+                      type: object
+                    condition:
+                      type: string
+                    data:
+                      items:
+                        properties:
+                          datasourceUid:
+                            description: Grafana data source unique identifier; it
+                              should be '__expr__' for a Server Side Expression operation.
+                            type: string
+                          model:
+                            description: JSON is the raw JSON query and includes the
+                              above properties as well as custom properties.
+                            x-kubernetes-preserve-unknown-fields: true
+                          queryType:
+                            description: |-
+                              QueryType is an optional identifier for the type of query.
+                              It can be used to distinguish different types of queries.
+                            type: string
+                          refId:
+                            description: RefID is the unique identifier of the query,
+                              set by the frontend call.
+                            type: string
+                          relativeTimeRange:
+                            description: relative time range
+                            properties:
+                              from:
+                                description: from
+                                format: int64
+                                type: integer
+                              to:
+                                description: to
+                                format: int64
+                                type: integer
+                            type: object
+                        type: object
+                      type: array
+                    execErrState:
+                      enum:
+                      - OK
+                      - Alerting
+                      - Error
+                      - KeepLast
+                      type: string
+                    for:
+                      default: 0s
+                      pattern: ^([0-9]+(\.[0-9]+)?(s|m|h|d|w))+$
+                      type: string
+                    isPaused:
+                      type: boolean
+                    keepFiringFor:
+                      format: duration
+                      pattern: ^([0-9]+(\.[0-9]+)?(ns|us|µs|ms|s|m|h))+$
+                      type: string
+                    labels:
+                      additionalProperties:
+                        type: string
+                      type: object
+                    missingSeriesEvalsToResolve:
+                      description: The number of missing series evaluations that must
+                        occur before the rule is considered to be resolved.
+                      format: int64
+                      type: integer
+                    noDataState:
+                      enum:
+                      - Alerting
+                      - NoData
+                      - OK
+                      - KeepLast
+                      type: string
+                    notificationSettings:
+                      properties:
+                        group_by:
+                          items:
+                            type: string
+                          type: array
+                        group_interval:
+                          type: string
+                        group_wait:
+                          type: string
+                        mute_time_intervals:
+                          items:
+                            type: string
+                          type: array
+                        receiver:
+                          type: string
+                        repeat_interval:
+                          type: string
+                      required:
+                      - receiver
+                      type: object
+                    record:
+                      properties:
+                        from:
+                          type: string
+                        metric:
+                          type: string
+                      required:
+                      - from
+                      - metric
+                      type: object
+                    title:
+                      example: Always firing
+                      maxLength: 190
+                      minLength: 1
+                      type: string
+                    uid:
+                      description: UID of the alert rule. Can be any string consisting
+                        of alphanumeric characters, - and _ with a maximum length
+                        of 40
+                      maxLength: 40
+                      pattern: ^[a-zA-Z0-9-_]+$
+                      type: string
+                  required:
+                  - condition
+                  - data
+                  - execErrState
+                  - for
+                  - noDataState
+                  - title
+                  - uid
+                  type: object
+                minItems: 1
+                type: array
               suspend:
                 description: Suspend pauses synchronizing attempts and tells the operator
                   to ignore changes
                 type: boolean
-              uid:
-                description: |-
-                  The UID, for the datasource, fallback to the deprecated spec.datasource.uid
-                  and metadata.uid. Can be any string consisting of alphanumeric characters,
-                  - and _ with a maximum length of 40 +optional
-                maxLength: 40
-                pattern: ^[a-zA-Z0-9-_]+$
-                type: string
-                x-kubernetes-validations:
-                - message: spec.uid is immutable
-                  rule: self == oldSelf
-              valuesFrom:
-                description: environments variables from secrets or config maps
-                items:
-                  properties:
-                    targetPath:
-                      type: string
-                    valueFrom:
-                      properties:
-                        configMapKeyRef:
-                          description: Selects a key of a ConfigMap.
-                          properties:
-                            key:
-                              description: The key to select.
-                              type: string
-                            name:
-                              default: ""
-                              description: |-
-                                Name of the referent.
-                                This field is effectively required, but due to backwards compatibility is
-                                allowed to be empty. Instances of this type with an empty value here are
-                                almost certainly wrong.
-                                More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names
-                              type: string
-                            optional:
-                              description: Specify whether the ConfigMap or its key
-                                must be defined
-                              type: boolean
-                          required:
-                          - key
-                          type: object
-                          x-kubernetes-map-type: atomic
-                        secretKeyRef:
-                          description: Selects a key of a Secret.
-                          properties:
-                            key:
-                              description: The key of the secret to select from.  Must
-                                be a valid secret key.
-                              type: string
-                            name:
-                              default: ""
-                              description: |-
-                                Name of the referent.
-                                This field is effectively required, but due to backwards compatibility is
-                                allowed to be empty. Instances of this type with an empty value here are
-                                almost certainly wrong.
-                                More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names
-                              type: string
-                            optional:
-                              description: Specify whether the Secret or its key must
-                                be defined
-                              type: boolean
-                          required:
-                          - key
-                          type: object
-                          x-kubernetes-map-type: atomic
-                      type: object
-                      x-kubernetes-validations:
-                      - message: Either configMapKeyRef or secretKeyRef must be set
-                        rule: (has(self.configMapKeyRef) && !has(self.secretKeyRef))
-                          || (!has(self.configMapKeyRef) && has(self.secretKeyRef))
-                  required:
-                  - targetPath
-                  - valueFrom
-                  type: object
-                maxItems: 99
-                type: array
             required:
-            - datasource
             - instanceSelector
+            - interval
+            - rules
             type: object
             x-kubernetes-validations:
-            - message: spec.uid is immutable
-              rule: ((!has(oldSelf.uid) && !has(self.uid)) || (has(oldSelf.uid) &&
-                has(self.uid)))
+            - message: Only one of FolderUID or FolderRef can be set and one must
+                be defined
+              rule: (has(self.folderUID) && !(has(self.folderRef))) || (has(self.folderRef)
+                && !(has(self.folderUID)))
+            - message: spec.editable is immutable
+              rule: ((!has(oldSelf.editable) && !has(self.editable)) || (has(oldSelf.editable)
+                && has(self.editable)))
+            - message: spec.folderUID is immutable
+              rule: ((!has(oldSelf.folderUID) && !has(self.folderUID)) || (has(oldSelf.folderUID)
+                && has(self.folderUID)))
+            - message: spec.folderRef is immutable
+              rule: ((!has(oldSelf.folderRef) && !has(self.folderRef)) || (has(oldSelf.folderRef)
+                && has(self.folderRef)))
             - message: disabling spec.allowCrossNamespaceImport requires a recreate
                 to ensure desired state
               rule: '!oldSelf.allowCrossNamespaceImport || (oldSelf.allowCrossNamespaceImport
                 && self.allowCrossNamespaceImport)'
           status:
-            description: GrafanaDatasourceStatus defines the observed state of GrafanaDatasource
+            description: The most recent observed state of a Grafana resource
             properties:
-              NoMatchingInstances:
-                description: The datasource instanceSelector can't find matching grafana
-                  instances
-                type: boolean
               conditions:
-                description: Results when synchonizing resource with Grafana instances
+                description: Results when synchronizing resource with Grafana instances
                 items:
                   description: Condition contains details for one aspect of the current
                     state of this API Resource.
@@ -321,17 +358,10 @@ spec:
                   - type
                   type: object
                 type: array
-              hash:
-                type: string
-              lastMessage:
-                description: 'Deprecated: Check status.conditions or operator logs'
-                type: string
               lastResync:
                 description: Last time the resource was synchronized with Grafana
                   instances
                 format: date-time
-                type: string
-              uid:
                 type: string
             type: object
         required:
