--- a/crds/grafana-operator/v5.21.4.grafana.integreatly.org_grafanadatasources.yaml
+++ b/crds/grafana-operator/v5.21.4.grafana.integreatly.org_grafanadatasources.yaml
@@ -4,19 +4,22 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.19.0
-  name: grafanacontactpoints.grafana.integreatly.org
+  name: grafanadatasources.grafana.integreatly.org
 spec:
   group: grafana.integreatly.org
   names:
     categories:
     - grafana-operator
-    kind: GrafanaContactPoint
-    listKind: GrafanaContactPointList
-    plural: grafanacontactpoints
-    singular: grafanacontactpoint
+    kind: GrafanaDatasource
+    listKind: GrafanaDatasourceList
+    plural: grafanadatasources
+    singular: grafanadatasource
   scope: Namespaced
   versions:
   - additionalPrinterColumns:
+    - jsonPath: .status.NoMatchingInstances
+      name: No matching instances
+      type: boolean
     - format: date-time
       jsonPath: .status.lastResync
       name: Last resync
@@ -27,8 +30,7 @@ spec:
     name: v1beta1
     schema:
       openAPIV3Schema:
-        description: GrafanaContactPoint is the Schema for the grafanacontactpoints
-          API
+        description: GrafanaDatasource is the Schema for the grafanadatasources API
         properties:
           apiVersion:
             description: |-
@@ -48,25 +50,51 @@ spec:
           metadata:
             type: object
           spec:
-            description: GrafanaContactPointSpec defines the desired state of GrafanaContactPoint
+            description: GrafanaDatasourceSpec defines the desired state of GrafanaDatasource
             properties:
               allowCrossNamespaceImport:
                 default: false
                 description: Allow the Operator to match this resource with Grafanas
                   outside the current namespace
                 type: boolean
-              disableResolveMessage:
-                description: |-
-                  Deprecated: define the receiver under .spec.receivers[]
-                  Will be removed in a later version
-                type: boolean
-              editable:
-                description: Whether to enable or disable editing of the contact point
-                  in Grafana UI
-                type: boolean
-                x-kubernetes-validations:
-                - message: spec.editable is immutable
-                  rule: self == oldSelf
+              datasource:
+                properties:
+                  access:
+                    type: string
+                  basicAuth:
+                    type: boolean
+                  basicAuthUser:
+                    type: string
+                  database:
+                    type: string
+                  editable:
+                    description: Whether to enable/disable editing of the datasource
+                      in Grafana UI
+                    type: boolean
+                  isDefault:
+                    type: boolean
+                  jsonData:
+                    type: object
+                    x-kubernetes-preserve-unknown-fields: true
+                  name:
+                    type: string
+                  orgId:
+                    description: Deprecated field, it has no effect
+                    format: int64
+                    type: integer
+                  secureJsonData:
+                    type: object
+                    x-kubernetes-preserve-unknown-fields: true
+                  type:
+                    type: string
+                  uid:
+                    description: Deprecated field, use spec.uid instead
+                    type: string
+                  url:
+                    type: string
+                  user:
+                    type: string
+                type: object
               instanceSelector:
                 description: Selects Grafana instances for import
                 properties:
@@ -116,131 +144,35 @@ spec:
                 x-kubernetes-validations:
                 - message: spec.instanceSelector is immutable
                   rule: self == oldSelf
-              name:
-                description: |-
-                  Receivers are grouped under the same ContactPoint using the Name
-                  Defaults to the name of the CR
-                type: string
-                x-kubernetes-validations:
-                - message: spec.name is immutable
-                  rule: self == oldSelf
-              receivers:
-                description: List of receivers that Grafana will fan out notifications
-                  to
+              plugins:
+                description: plugins
                 items:
-                  description: Represents an integration to external services that
-                    receive Grafana notifications
                   properties:
-                    disableResolveMessage:
-                      type: boolean
-                    settings:
-                      x-kubernetes-preserve-unknown-fields: true
-                    type:
+                    name:
                       minLength: 1
                       type: string
-                    uid:
-                      description: Manually specify the UID the Contact Point is created
-                        with. Can be any string consisting of alphanumeric characters,
-                        - and _ with a maximum length of 40
-                      maxLength: 40
-                      pattern: ^[a-zA-Z0-9-_]+$
+                    version:
+                      pattern: ^((0|[1-9]\d*)\.(0|[1-9]\d*)\.(0|[1-9]\d*)(?:-((?:0|[1-9]\d*|\d*[a-zA-Z-][0-9a-zA-Z-]*)(?:\.(?:0|[1-9]\d*|\d*[a-zA-Z-][0-9a-zA-Z-]*))*))?(?:\+([0-9a-zA-Z-]+(?:\.[0-9a-zA-Z-]+)*))?|latest)$
                       type: string
-                    valuesFrom:
-                      items:
-                        properties:
-                          targetPath:
-                            type: string
-                          valueFrom:
-                            properties:
-                              configMapKeyRef:
-                                description: Selects a key of a ConfigMap.
-                                properties:
-                                  key:
-                                    description: The key to select.
-                                    type: string
-                                  name:
-                                    default: ""
-                                    description: |-
-                                      Name of the referent.
-                                      This field is effectively required, but due to backwards compatibility is
-                                      allowed to be empty. Instances of this type with an empty value here are
-                                      almost certainly wrong.
-                                      More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names
-                                    type: string
-                                  optional:
-                                    description: Specify whether the ConfigMap or
-                                      its key must be defined
-                                    type: boolean
-                                required:
-                                - key
-                                type: object
-                                x-kubernetes-map-type: atomic
-                              secretKeyRef:
-                                description: Selects a key of a Secret.
-                                properties:
-                                  key:
-                                    description: The key of the secret to select from.  Must
-                                      be a valid secret key.
-                                    type: string
-                                  name:
-                                    default: ""
-                                    description: |-
-                                      Name of the referent.
-                                      This field is effectively required, but due to backwards compatibility is
-                                      allowed to be empty. Instances of this type with an empty value here are
-                                      almost certainly wrong.
-                                      More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names
-                                    type: string
-                                  optional:
-                                    description: Specify whether the Secret or its
-                                      key must be defined
-                                    type: boolean
-                                required:
-                                - key
-                                type: object
-                                x-kubernetes-map-type: atomic
-                            type: object
-                            x-kubernetes-validations:
-                            - message: Either configMapKeyRef or secretKeyRef must
-                                be set
-                              rule: (has(self.configMapKeyRef) && !has(self.secretKeyRef))
-                                || (!has(self.configMapKeyRef) && has(self.secretKeyRef))
-                        required:
-                        - targetPath
-                        - valueFrom
-                        type: object
-                      maxItems: 99
-                      type: array
                   required:
-                  - settings
-                  - type
+                  - name
+                  - version
                   type: object
-                maxItems: 99
                 type: array
               resyncPeriod:
                 description: How often the resource is synced, defaults to 10m0s if
                   not set
                 pattern: ^([0-9]+(\.[0-9]+)?(ns|us|µs|ms|s|m|h))+$
                 type: string
-              settings:
-                description: |-
-                  Deprecated: define the receiver under .spec.receivers[]
-                  Will be removed in a later version
-                x-kubernetes-preserve-unknown-fields: true
               suspend:
                 description: Suspend pauses synchronizing attempts and tells the operator
                   to ignore changes
                 type: boolean
-              type:
-                description: |-
-                  Deprecated: define the receiver under .spec.receivers[]
-                  Will be removed in a later version
-                minLength: 1
-                type: string
               uid:
                 description: |-
-                  Deprecated: define the receiver under .spec.receivers[]
-                  Manually specify the UID the Contact Point is created with. Can be any string consisting of alphanumeric characters, - and _ with a maximum length of 40
+                  The UID, for the datasource, fallback to the deprecated spec.datasource.uid
+                  and metadata.uid. Can be any string consisting of alphanumeric characters,
+                  - and _ with a maximum length of 40 +optional
                 maxLength: 40
                 pattern: ^[a-zA-Z0-9-_]+$
                 type: string
@@ -248,9 +180,7 @@ spec:
                 - message: spec.uid is immutable
                   rule: self == oldSelf
               valuesFrom:
-                description: |-
-                  Deprecated: define the receiver under .spec.receivers[]
-                  Will be removed in a later version
+                description: environments variables from secrets or config maps
                 items:
                   properties:
                     targetPath:
@@ -316,24 +246,26 @@ spec:
                 maxItems: 99
                 type: array
             required:
+            - datasource
             - instanceSelector
             type: object
             x-kubernetes-validations:
-            - message: spec.name is immutable
-              rule: ((!has(oldSelf.name) && !has(self.name)) || (has(oldSelf.name)
-                && has(self.name)))
-            - message: spec.editable is immutable
-              rule: ((!has(oldSelf.editable) && !has(self.editable)) || (has(oldSelf.editable)
-                && has(self.editable)))
+            - message: spec.uid is immutable
+              rule: ((!has(oldSelf.uid) && !has(self.uid)) || (has(oldSelf.uid) &&
+                has(self.uid)))
             - message: disabling spec.allowCrossNamespaceImport requires a recreate
                 to ensure desired state
               rule: '!oldSelf.allowCrossNamespaceImport || (oldSelf.allowCrossNamespaceImport
                 && self.allowCrossNamespaceImport)'
           status:
-            description: The most recent observed state of a Grafana resource
+            description: GrafanaDatasourceStatus defines the observed state of GrafanaDatasource
             properties:
+              NoMatchingInstances:
+                description: The datasource instanceSelector can't find matching grafana
+                  instances
+                type: boolean
               conditions:
-                description: Results when synchonizing resource with Grafana instances
+                description: Results when synchronizing resource with Grafana instances
                 items:
                   description: Condition contains details for one aspect of the current
                     state of this API Resource.
@@ -389,10 +321,17 @@ spec:
                   - type
                   type: object
                 type: array
+              hash:
+                type: string
+              lastMessage:
+                description: 'Deprecated: Check status.conditions or operator logs'
+                type: string
               lastResync:
                 description: Last time the resource was synchronized with Grafana
                   instances
                 format: date-time
+                type: string
+              uid:
                 type: string
             type: object
         required:
