--- a/crds/grafana-operator/v5.21.4.grafana.integreatly.org_grafanamutetimings.yaml
+++ b/crds/grafana-operator/v5.21.4.grafana.integreatly.org_grafanamutetimings.yaml
@@ -4,16 +4,16 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.19.0
-  name: grafananotificationtemplates.grafana.integreatly.org
+  name: grafanamutetimings.grafana.integreatly.org
 spec:
   group: grafana.integreatly.org
   names:
     categories:
     - grafana-operator
-    kind: GrafanaNotificationTemplate
-    listKind: GrafanaNotificationTemplateList
-    plural: grafananotificationtemplates
-    singular: grafananotificationtemplate
+    kind: GrafanaMuteTiming
+    listKind: GrafanaMuteTimingList
+    plural: grafanamutetimings
+    singular: grafanamutetiming
   scope: Namespaced
   versions:
   - additionalPrinterColumns:
@@ -27,8 +27,7 @@ spec:
     name: v1beta1
     schema:
       openAPIV3Schema:
-        description: GrafanaNotificationTemplate is the Schema for the GrafanaNotificationTemplate
-          API
+        description: GrafanaMuteTiming is the Schema for the GrafanaMuteTiming API
         properties:
           apiVersion:
             description: |-
@@ -48,8 +47,7 @@ spec:
           metadata:
             type: object
           spec:
-            description: GrafanaNotificationTemplateSpec defines the desired state
-              of GrafanaNotificationTemplate
+            description: GrafanaMuteTimingSpec defines the desired state of GrafanaMuteTiming
             properties:
               allowCrossNamespaceImport:
                 default: false
@@ -57,8 +55,9 @@ spec:
                   outside the current namespace
                 type: boolean
               editable:
-                description: Whether to enable or disable editing of the notification
-                  template in Grafana UI
+                default: true
+                description: Whether to enable or disable editing of the mute timing
+                  in Grafana UI
                 type: boolean
                 x-kubernetes-validations:
                 - message: spec.editable is immutable
@@ -113,7 +112,7 @@ spec:
                 - message: spec.instanceSelector is immutable
                   rule: self == oldSelf
               name:
-                description: Template name
+                description: A unique name for the mute timing
                 type: string
               resyncPeriod:
                 description: How often the resource is synced, defaults to 10m0s if
@@ -124,17 +123,68 @@ spec:
                 description: Suspend pauses synchronizing attempts and tells the operator
                   to ignore changes
                 type: boolean
-              template:
-                description: Template content
-                type: string
+              time_intervals:
+                description: Time intervals for muting
+                items:
+                  properties:
+                    days_of_month:
+                      description: |-
+                        The date 1-31 of a month. Negative values can also be used to represent days that begin at the end of the month.
+                        For example: -1 for the last day of the month.
+                      items:
+                        type: string
+                      type: array
+                    location:
+                      description: Depending on the location, the time range is displayed
+                        in local time.
+                      type: string
+                    months:
+                      description: |-
+                        The months of the year in either numerical or the full calendar month.
+                        For example: 1, may.
+                      items:
+                        type: string
+                      type: array
+                    times:
+                      description: The time inclusive of the start and exclusive of
+                        the end time (in UTC if no location has been selected, otherwise
+                        local time).
+                      items:
+                        properties:
+                          end_time:
+                            description: end time
+                            type: string
+                          start_time:
+                            description: start time
+                            type: string
+                        required:
+                        - end_time
+                        - start_time
+                        type: object
+                      type: array
+                    weekdays:
+                      description: |-
+                        The day or range of days of the week.
+                        For example: monday, thursday
+                      items:
+                        type: string
+                      type: array
+                    years:
+                      description: |-
+                        The year or years for the interval.
+                        For example: 2021
+                      items:
+                        type: string
+                      type: array
+                  type: object
+                minItems: 1
+                type: array
             required:
             - instanceSelector
             - name
+            - time_intervals
             type: object
             x-kubernetes-validations:
-            - message: spec.editable is immutable
-              rule: ((!has(oldSelf.editable) && !has(self.editable)) || (has(oldSelf.editable)
-                && has(self.editable)))
             - message: disabling spec.allowCrossNamespaceImport requires a recreate
                 to ensure desired state
               rule: '!oldSelf.allowCrossNamespaceImport || (oldSelf.allowCrossNamespaceImport
@@ -143,7 +193,7 @@ spec:
             description: The most recent observed state of a Grafana resource
             properties:
               conditions:
-                description: Results when synchonizing resource with Grafana instances
+                description: Results when synchronizing resource with Grafana instances
                 items:
                   description: Condition contains details for one aspect of the current
                     state of this API Resource.
