Feature logstash monitoring (#111)
* fix fluent alerts

* enable service monitor loki

* fix attribute for loki serviceMonitor

* adjust fluentbit output errors

* update system dashboard

* fix grafana dashboards

* fix system dashboard

* update system dashboard with loki pannels

* update grafana dashboard

* update system dashboard

* update system dashboard

* fix system dashboard

* update system dashboard

* update system dashboard

* system chart update

* fix

* loki: increase max_query_series

* system dashboard update

* prometheus: loki alert

* test

* loki 5xx alert use decimal %

* remove test

* update services dashboard with loki_datasource variable approach

* changelog:update

* changelog:update

* loki alert use humanizePercentage

* test alert

* grafana update

* update loki

* changelog:update

--- a/charts/prometheus/values.yaml
+++ b/charts/prometheus/values.yaml
@@ -666,8 +666,17 @@ prometheus-rules:
           Fluentbit_output_error:
             enabled: false
             for: 5m
-            expr: sum by (name) (rate(fluentbit_output_errors_total[5m])) > 0
-            description: "Output '{{ $labels.name }}' error"
+            expr: sum by (pod) (rate(fluentbit_output_errors_total[5m])) / sum by(pod) (rate(fluentbit_input_records_total[5m])) > 0.07
+            description: "High output error rate on {{ $labels.pod }}"
+
+          Loki_high_5xx_rate:
+            enabled: false
+            for: 10m
+            expr: |
+              sum(rate(loki_request_duration_seconds_count{status_code=~"5.."}[5m])) by (namespace, job, route)
+                /
+              sum(rate(loki_request_duration_seconds_count[5m])) by (namespace, job, route) > 0.1
+            description: "{{ $labels.job }} {{ $labels.route }} is experiencing {{ humanizePercentage $value }} errors."
 
           # Postgres
           Available_postgresql_connections_are_running_out:
@@ -768,7 +777,10 @@ prometheus-rules:
             enabled: false
             for: 10m
             description: "Fluent-bit pipeline experiencing high latency, pod '{{ $labels.pod }}', input '{{ $labels.input }}', output '{{ $labels.output }}'"
-            expr: rate(fluentbit_output_latency_seconds_sum[5m]) / rate(fluentbit_output_latency_seconds_count[5m]) > 2
+            #We exclude cloud-based sources because they deliver logs to buckets
+            #at intervals much longer than seconds, so the latency measured
+            #here does not meaningfully impact user experience.
+            expr: rate(fluentbit_output_latency_seconds_sum{service!~".*-fluentbit-(gcp|yc|aws)$"}[5m]) / rate(fluentbit_output_latency_seconds_count{service!~".*-fluentbit-(gcp|yc|aws)$"}[5m]) > 2
 
           # Postgres
           Postgres_logical_backup_error:
