Feature pg logs retention (#114)
* Feature use endpointslices (#110)

* disable kubelet enpoints

* add endpointslices to pomerium rbac

* update rmq

* update rmq crds

* update prometheus crds

* enable prometheus-operator

* change rmq-operator charts url

* helm dep update

* add rmq-deps

* fix rmq

* update rmq-operator

* update rmq-msg-tp-operator

* update rmq

* update prometheus

* update info

* ipdate pomerium image

* update pomerium crds

* update info

* add readme and copyright

* helm dep update

* change pomerium res.limits

* update info

* change Readme

* del tgz

* Revert "del tgz"

This reverts commit c0fbc307a796855d334e98632df2437df57035fe.

* update gha crds

* update gha

* helm dep update

* update info

* change pg fluentbit input setting

* update rmq

* change pg logs rotation

---------

Co-authored-by: St.Dmitry <hector@defigang.dev>

* Feature logstash monitoring (#111)

* fix fluent alerts

* enable service monitor loki

* fix attribute for loki serviceMonitor

* adjust fluentbit output errors

* update system dashboard

* fix grafana dashboards

* fix system dashboard

* update system dashboard with loki pannels

* update grafana dashboard

* update system dashboard

* update system dashboard

* fix system dashboard

* update system dashboard

* update system dashboard

* system chart update

* fix

* loki: increase max_query_series

* system dashboard update

* prometheus: loki alert

* test

* loki 5xx alert use decimal %

* remove test

* update services dashboard with loki_datasource variable approach

* changelog:update

* changelog:update

* loki alert use humanizePercentage

* test alert

* grafana update

* update loki

* changelog:update

* Do 227 kub gl runner (#108)

* Added gitlab runner kubernetes helm chart

* Fluent cloud cache (#112)

* fluent cloud add fuse caching options

* remove cpu limits + add 2Gib cache

* reduce ignore older + decrease file cache

* changelog:update

* pg logs fixes

* add info

* delete 

--- a/charts/postgres/values.yaml
+++ b/charts/postgres/values.yaml
@@ -51,6 +51,7 @@ postgres-pod-envs:
   #Without this wal-e clone will not work due to this
   #https://github.com/zalando/spilo/blob/3.0-p1/postgres-appliance/scripts/restore_command.sh#L39
   CLONE_WALG_DOWNLOAD_CONCURRENCY: "2"
+  CRONTAB: "['0 4 * * 1 find /home/postgres/pgdata/pgroot/pg_log/ -type f -mtime +7 -delete']"
 
 pgadmin:
   enabled: false
